[package]
name = "easy_process"
version = "0.1.8-alpha.0"
authors = ["Otavio Salvador <otavio@ossystems.com.br>"]
description = "Easy to use process runner"
repository = "https://github.com/otavio/easy-process-rs"
homepage = "https://github.com/otavio/easy-process-rs"
documentation = "https://docs.rs/easy_process"
keywords = ["process", "run"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[badges]
travis-ci = { repository = "otavio/easy-process-rs" }

[dependencies]
checked_command = "0.2.2"
cmdline_words_parser = "0.1.0"
